--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -45,3 +45,13 @@ a {
 .el-icon {
     margin-right: 5px;
 }
+/* src/assets/styles/global.css */
+.error-message-box .el-message-box__message {
+    color: red !important;
+    font-size: 14px !important;
+  }
+  
+  .error-message-box .el-message-box__input {
+    border-color: red !important;
+  }
+  
